<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green_200"
    tools:context=".activity.LogInSignUpActivity">

<!--    <ImageView-->
<!--        android:id="@+id/loginsignup_image"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:contentDescription="@android:string/no"-->
<!--        android:scaleType="centerCrop"-->
<!--        android:src="@drawable/plant_wallpaper"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="150dp"
        android:src="@drawable/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signin_button"/>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/green_dark"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        android:text="@string/app_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/green_dark"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        android:text="Kiến thức cho mọi người"/>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dang_nhap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@+id/signup_button"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dang_ky"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:strokeColor="@color/green_900"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/green_dark"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintTop_toBottomOf="@+id/signup_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/chinh_sach"/>


</androidx.constraintlayout.widget.ConstraintLayout>